--- a/package.json
+++ b/package.json
@@ -2,12 +2,14 @@
   "name": "song-search",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://osmelpm.github.io/song-search",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "gh-pages": "^3.2.3",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
     "web-vitals": "^2.1.4"
@@ -15,8 +17,9 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "eject": "react-scripts eject",
-    "fake-api": "json-server --watch src/api/db.json --port 5000"
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
